--- a/Pinyinglish.ipynb
+++ b/Pinyinglish.ipynb
@@ -740,7 +740,7 @@
     "\n",
     "I routed the 'app' to '/pinyinglish', then tested it in the browser. \n",
     "\n",
-    "Here is the link to the Glitch hosted version: https://celestial-roan-tang.glitch.me/pinyinglish"
+    "Here is the link to the Glitch hosted version: https://pinyinglish.glitch.me"
    ]
   },
   {
